Better resolution for Bootstrap layout bug

--- a/src/main/resources/static/css/layout.css
+++ b/src/main/resources/static/css/layout.css
@@ -26,7 +26,7 @@ body {
     flex-direction: column;
 }
 
-.container-root {
+#container-root {
     flex-grow: 1;
     display: flex;
 }
